[package]
name = "opsview"
description = "A Rust Opsview API Client Library with batteries included"
version = "0.1.7"
edition = "2021"
license = "ISC"
authors = ["Johan Thorén <johan@thoren.xyz>"]
readme = "README.md"
repository = "https://github.com/johanthoren/opsview-rs"
keywords = ["opsview"]

[lib]
path = "src/lib.rs"

[[bench]]
name = "opsviewclient_benches"
harness = false

[dependencies]
decimal-percentage = "0.1.4"
futures = "0.3.29"
lazy_static = "1.4.0"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
mockito = "1.4.0"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
